--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker://pandoc/core:3.1
         with:
           args: >-
-            fmt.yml README.md -s -o index.html
+            fmt.yml README.md notes.md -s -o index.html
             --csl=acm.csl --citeproc --bibliography=references.bib
       - name: Setup Pages
         uses: actions/configure-pages@v3
